--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
           rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <title>Travel Advisor by Nick Miriad</title>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyDKAIWbkM0JwPKv5CVcIvM_iYsj5c7XtMs"></script>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
